Fixed scrollbar height

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -238,7 +238,7 @@ ul.icons {
 /* Let's get this party started */
 ::-webkit-scrollbar {
   width: 8px;
-  height: 8px;
+  height: 4px;
 }
 
 /* Track */
@@ -252,6 +252,7 @@ ul.icons {
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 10px;
   border-radius: 10px;
+
   background: $primary; 
   box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
@@ -259,7 +260,6 @@ ul.icons {
 ::-webkit-scrollbar-thumb:window-inactive {
 background: $dark; 
 }
-
 .time {
   font-family: var(--clock-font-family);
 }
